--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-	    <!-- Snap Pixel Code -->
-<script type='text/javascript'>
-(function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
-{a.handleRequest?a.handleRequest.apply(a,arguments):a.queue.push(arguments)};
-a.queue=[];var s='script';r=t.createElement(s);r.async=!0;
-r.src=n;var u=t.getElementsByTagName(s)[0];
-u.parentNode.insertBefore(r,u);})(window,document,
-'https://sc-static.net/scevent.min.js');
-
-snaptr('init', 'cc3f5798-7c81-4d04-85cb-4f7f5b604c7c', {
-'user_email': '__INSERT_USER_EMAIL__'
-});
-
-snaptr('track', 'PAGE_VIEW');
-
-</script>
-<!-- End Snap Pixel Code -->
         <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -139,22 +122,10 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1130855064735398');
-fbq('init', '389774947135950');
-fbq('init', '423241836733401');
-fbq('init', '7704500689572976');
-fbq('init', '650866680471113');
-fbq('init', '402544965698848');
-fbq('init', '1499486557588580');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=1499486557588580&ev=PageView&noscript=1"/>
 </noscript>
 <!-- End Meta Pixel Code -->
 <script>
@@ -189,17 +160,17 @@ location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backred
 <body>
     <div class="container">
         <div class="headline">Aging Skin?</div>
-        <div class="subheadline">Scientists Reveal <span class="bold-text">"Egyptian Method" Restores</span> <u>Overnight</u></div>
+        <div class="subheadline">Discover the <span class="bold-text">"Egyptian Root Ritual" Restores</span> Secret That Demolishes Wrinkles in Minutes <u>in Minutes</u></div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
         </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1" class="cta-button">Tap Here To Watch The Video</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Discover the "Egyptian Root Ritual" take 20 years off ones age</a>
         <div class="main-text">
-            Renowned scientists have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol and Neutrogena.<br><br>
-            Apply it to your face every night for 15 seconds to revitalize the skin from within... eliminating wrinkles, dark spots and even stubborn fat... without any traditional methods such as expensive treatments, creams, diets or exercises, taking off 10 years from your age.
+            Scientists recently discovered a strange "Egyptian Root Ritual" that is 10 times more potent than retinol.<br><br>
+            Rub it in your face daily for 2 minutes to overthrow black spots, wrinkles and other skin problems that come with age.
             <br><br>
-            This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
-            Tap the button below and watch the presentation on the "Egyptian Method" until the end, before it's too late.
+            This revolutionary discovery has sent the world of skin care and anti-aging into an outrage, and big phrama wants to take it down.<br><br>
+            Tap the button below and discover the "Egyptian Root Ritual" for yourself before it's too late.
         </div>
          <style>
   #counterWrapper {
@@ -236,10 +207,10 @@ location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backred
 </script>
 
 </body>
-        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1" class="cta-button">Watch Now</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
-        <p><a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
+        <p><a href="https://theneotonics.com/video.php?aff_id=170827" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
         <p>Copyright 2024.</p>
         <p>All rights reserved</p>
         <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
@@ -248,5 +219,35 @@ location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backred
         <p>DISCLAIMER: The content of this website is based on the author’s opinion and is provided on an “AS IS” and “AS AVAILABLE” basis. We recommend conducting your own research and verifying information with other sources when seeking information about health issues. Always review the information carefully with your professional healthcare provider before using any of the protocols presented on this website and/or in the product sold here. The author is not engaged in rendering medical or similar professional services or advice via this website, and the information provided is not intended to replace medical advice offered by a physician or other licensed healthcare provider.</p>
     </div>
      <script type="text/javascript" src="https://buygoods.com/js/facebook_link_manager.js"></script>
+		<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        function getUTMParameters() {
+            let params = {};
+            let queryString = window.location.search.substring(1);
+            let regex = /([^&=]+)=([^&]*)/g;
+            let match;
+            while (match = regex.exec(queryString)) {
+                params[decodeURIComponent(match[1])] = decodeURIComponent(match[2]);
+            }
+            return params;
+        }
+
+        function addUTMParametersToLinks() {
+            let utmParams = getUTMParameters();
+            let utmString = Object.keys(utmParams).map(key => `${key}=${utmParams[key]}`).join('&');
+            let links = document.querySelectorAll('a');
+
+            links.forEach(link => {
+                let url = new URL(link.href);
+                if (utmString) {
+                    url.search += (url.search ? '&' : '') + utmString;
+                    link.href = url.toString();
+                }
+            });
+        }
+
+        addUTMParametersToLinks();
+    });
+</script>
 </body>
 </html>
