--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Skin Secret</title>
+    <title>Health Renew</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap">
     <style>
         body {
