--- a/index.html
+++ b/index.html
@@ -128,15 +128,6 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
 </noscript>
 <!-- End Meta Pixel Code -->
-<script>
-		!function (w, d, t) {
-		  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++
-)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src=i+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
-		
-		  ttq.load('COEM6P3C77U7P5ED1KB0');
-		  ttq.page();
-		}(window, document, 'ttq');
-	</script>
 	    <!DOCTYPE html>
 <html>
 <head>
@@ -159,10 +150,10 @@ location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backred
 </head>
 <body>
     <div class="container">
-        <div class="headline">Aging Skin?</div>
-        <div class="subheadline">Discover the <span class="bold-text">"Egyptian Root Ritual" Restores</span> Secret That Demolishes Wrinkles in Minutes <u>in Minutes</u></div>
+        <div class="headline">99.8% of women don't know this</div>
+        <div class="subheadline">Discover the "Egyptian Root Ritual" Secret That Demolishes Wrinkles <u>in Minutes</u></div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.png" alt="Amazing Skin Secret"></a>
         </div>
         <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Discover the "Egyptian Root Ritual" take 20 years off ones age</a>
         <div class="main-text">
