--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backred
         <div class="headline">99.8% of women don't know this</div>
         <div class="subheadline">Discover the "Egyptian Root Ritual" Secret That Demolishes Wrinkles <u>in Minutes</u></div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.png" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.avif" alt="Amazing Skin Secret"></a>
         </div>
         <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Discover the "Egyptian Root Ritual" take 20 years off ones age</a>
         <div class="main-text">
