--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             padding: 20px;
             border-radius: 5px;
             font-size: 34px;
-            color: #fff;
-            background-color: #d4a0cb;
-            font-size: 29px;
+            font-size: 14px;
             line-height: 1;
             padding: 20px 0;
             margin-bottom: 10px;
@@ -62,7 +60,7 @@
             display: block;
             margin: 20px auto;
             padding: 15px 30px;
-            background-color: #E8C718;
+            background-color: #2563eb;
             color: #fff;
             text-align: center;
             text-decoration: none;
@@ -80,13 +78,20 @@
             background-color: #e68a00;
         }
 
-        .main-text {
-            text-align: justify;
-            font-size: 17px; /* Alterado o tamanho do texto para 17px */
-            line-height: 1.5;
-            margin-bottom: 20px;
-            font-weight: 600; /* Aumenta o peso da fonte */
-        }
+.main-text {
+    text-align: justify;
+    font-size: 17px; /* Alterado o tamanho do texto para 17px */
+    line-height: 1.5;
+    margin-bottom: 20px;
+    font-weight: 600; /* Aumenta o peso da fonte */
+}
+
+@media (max-width: 767px) {
+    .main-text {
+        margin-left: 10px; /* Adiciona margem esquerda de 10px no mobile */
+        margin-right: 10px; /* Adiciona margem direita de 10px no mobile */
+    }
+}
 
         .bold-text {
             font-weight: bold;
@@ -94,7 +99,7 @@
         }
 
         .footer {
-            background-color: #d4a0cb; /* Cor */
+            background-color: #150334; /* Cor */
             color: #fff;
             text-align: center;
             padding: 20px;
