--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
 
         .cta-button:hover {
-            background-color: #e68a00;
+            background-color: #003fc8;
         }
 
 .main-text {
