--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             margin-top: 10px;
             margin-bottom: 20px;
             color: #000;
+	    line-height: 1.3;
         }
 
         .image-container {
@@ -155,7 +156,7 @@ location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backred
 <body>
     <div class="container">
         <div class="headline">99.8% of women don't know this</div>
-        <div class="subheadline">Discover the "Egyptian Root Ritual" Secret That Demolishes Wrinkles<u>in Minutes</u></div>
+        <div class="subheadline">Discover the "Egyptian Root Ritual" Secret That Demolishes Wrinkles <u>in Minutes</u></div>
         <div class="image-container">
             <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.avif" alt="Amazing Skin Secret"></a>
         </div>
